--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /*align-items: center;*/
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-image: linear-gradient(to left, #b38759, #fc3c0c);
+  height: 100%;
+  width: 100%;
+}
+.weirdtext{
+  text-align: right;
+  justify-content: flex-end
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text {
+  color: #e63205;
+  font-family:Arial, Helvetica, sans-serif;
+}
+.tableContainer {
+  border-collapse: collapse;
+}
+
+.tableheader {
+  color:blue;
+}
+
+.navButton {
+  background-color: #03d2f1;
+  border: none;
+  color: rgb(240, 7, 7);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+
+.navText {
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight:bold;
+  color: #ec9e0c;
 }
